--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,27 @@ emoji
 requests
 sqlalchemy
 python-telegram-bot==11.1.0
-psycopg2-binary
+psycopg2
 feedparser
 pyowm
-bs4
-lxml
-demjson
-PyLyrics
-wget
-gTTS
-telegram
-zalgo_text
+pythonping
 pynewtonmath
-bs4
-telegraph
+#memes from SkittBot
+spongemock
+zalgo-text
+geopy
+nltk
+aiohttp>=2.2.5
+Pillow>=4.2.0
+#Cool stuff by Peak
+PyLyrics
+#AEX
+hurry.filesize
+#translator
+beautifulsoup4==4.6.3
+tldextract
+wikipedia
+googletrans
+alphabet_detector
+psutil
+tswift
